--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,9 @@
   "author": "kevin",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^6.2.1",
     "nodemon": "^2.0.15"
