--- a/cliente/package.json
+++ b/cliente/package.json
@@ -11,7 +11,8 @@
     "body-parser": "^1.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-router": "^6.4.0",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.0",
     "sweetalert2": "^11.4.0",
     "uniqid": "^5.4.0",
